plugins {
    id "java"
    id 'maven-publish'
}

sourceCompatibility = JavaVersion.VERSION_11
targetCompatibility = JavaVersion.VERSION_11

repositories {
    jcenter()
    maven {
        url 'https://frcmaven.wpi.edu/artifactory/release'
    }
}

dependencies {
    implementation group: 'edu.wpi.first.wpilibNewCommands', name: 'wpilibNewCommands-java', version: '2023.4.1'
    implementation group: 'edu.wpi.first.wpilibj', name: 'wpilibj-java', version: '2023.4.1'
    implementation group: 'edu.wpi.first.wpimath', name: 'wpimath-java', version: '2023.4.1'
    implementation group: 'edu.wpi.first.wpiutil', name: 'wpiutil-java', version: '2023.4.1'
    implementation group: 'edu.wpi.first.ntcore', name: 'ntcore-java', version: '2023.4.1'
}

publishing {
    publications {
        mavenJava(MavenPublication) {
            groupId = 'org.gradle.sample'
            artifactId = 'library'
            version = '1.1'

            from components.java
        }
    }
}
